--- a/_posts/2021-02-19-指令(MIPS-32).md
+++ b/_posts/2021-02-19-指令(MIPS-32).md
@@ -30,7 +30,7 @@ tags:
 * 编译时的临时寄存器：$t0, $t1...
 * $zero恒置为0，简化指令集。
 ## 助记符
-**add**，**sub**，**addi**，**lw**，**sw**，**sll**，**srl**，**and**，**andi**，**or**，**ori**，**nor**
+**add**，**sub**，**addi**，**lw**，**sw**，**sll**，**srl**，**and**，**andi**，**or**，**ori**，**nor**，**beq**，**bne**，**j**，**slt**，**slti** 
   
 ## 设计三原则
 * 原则1：简单源于规整
@@ -231,3 +231,103 @@ nor $t0, $t1, $t3 # reg $t0 = ~ (reg $t1 | reg $t3)
 >在与立即数进行逻辑与操作和逻辑或操作时，立即数的高16位补0后形成32位常数进行计算，而作立即数加法时，需将立即数进行符号扩展。
 
 ## 决策指令
+计算机和简单计算器的区别就在于决策能力，根据输入数据和计算过程中产生的值，它可以执行不同的指令。
+
+程序语言通常使用if语句描述决策，有时也是用go to语句和标签。MIPS汇编语言中有两条类似if和go to语句功能的指令。
+### 条件分支指令
+该指令会先比较两个值，然后根据比较的结果决定是否从程序中的一个新地址开始执行指令序列。
+#### beq(branch if equal)
+```mips
+beq register1, register2, L1
+```
+若两个寄存器数值相等，则转到L1的语句来执行。
+#### bne(branch if not equal)
+```mips
+bne register1, register2, L1
+```
+若两个寄存器数值不相等，则转到L1的语句来执行。
+
+eg：将if-then-else语句编译为条件分支指令。在下面这段代码中，f，g，h，i，j都是变量，设该5个变量依次对应于从$s0到$s4的寄存器，求这条C语言if语句编译后形成的MIPS代码。
+```c
+if (i == j) f = g + h; else f = g - h;
+```
+首先验证i和j是否相等，需要一条beq指令。不过通过测试分支的相反条件来跳过if语句后面的then部分，代码效率更高，所以还是用bne指令更好。还要定义一个Else标签。
+```mips
+bne $s3, $s4, Else  # go to Else if i != j
+```
+接下来是个单操作，来实现 f = g + h
+```
+add $s0, $s1, $s2  # f = g + h(skipped if i != j)
+```
+在if语句结尾部分，还要引入另一种分支指令，为无条件分支指令，当执行到该指令后，程序必须分支。MIPS将无条件分支指令命名为jump，简写为j。Exit标签也需要定义。
+```mips
+j Exit  # go to Exit
+```
+if语句中else部分的赋值语句也可以编译成一条指令，只需将标签Else加在这条指令前、标签Exit加在该条指令后面，表示if-then-else编译的代码结束。
+```mips
+Else: sub $s0, $s1, $s2  # f = g - h(skipped if i = j)
+Exit: 
+```
+
+## 循环
+无论是在二选一的if语句中，还是在迭代计算的循环语句中，决策都起着重要作用。但这两种情况下，关于决策的汇编语言指令是相同的。
+
+eg：编译while循环语句
+```C
+while (save[i] == k)
+      i += 1;
+```
+假设i和k存放在寄存器$s3和$s5中，数组save的基址存放在寄存器$s6中。
+
+我们的思路，首先是将save[i]读入进一个临时寄存器中，在读入前需要计算地址，将4*i加到基址后形成访存地址。我们可以采用逻辑左移实现该乘法。
+
+定义一个标签，以便能在循环末端跳回该指令。
+```mips
+Loop: sll $t1, $s3, 2 # Temp reg $t1 = i * 4
+```
+为得到save[i]的地址，需要将$t1和$t6中save的基址相加。
+```mips
+add $t1, $t1, $s6 # $t1 = address of save[i]
+```
+将该地址存入一个临时寄存器中
+```mips
+lw $t0, 0($t1)
+```
+下一条指令进行循环判断，若save[i] != k则退出循环。
+```mips
+bne $t0, $s5, Exit
+```
+再下一条指令将i自加。
+```mips
+addi $s3, $s3, 1  # i = i + 1
+```
+在循环的末尾，程序跳到循环的开始。随后增加一个Exit标签。
+```mips
+j Loop  # go to Loop
+Exit:
+```
+
+>基本块是没有分支(可能出现在末尾者除外)并且没有分支目标/分支标签(可能出现在开始者除外)的指令序列
+
+### 小于则置位(set on less than)
+最常见的判断语句可能是相等或不等，但有时判断一个变量是否小于另一个变量也非常有用。例如for循环就需要判断索引变量是否小于0。在MIPS中，使用**slt**来实现。该指令在比较两个寄存器内容之后，若第一个寄存器小于第二个寄存器，则将第三个寄存器设置为1，否则设置为0.
+```mips
+slt $t0, $s3, $s4 # $t0 = 1 if $s3 < $s4
+```
+同样也有立即数版本
+```mips
+slti $t0, $s2, 10 # $t0 = 1 if $s2 < 10
+```
+遵循简单的设计原则，MIPS体系并没有提供小于则分支的指令，它会延长时钟周期时间，或增加平均执行每条指令的周期数(CPI)。MIPS编译器使用**slt**、**slti**、**beq**、**bne**和固定值0($zero)来创建所有的比较条件：相等、不等、小于或等于、大于、大于或等于。
+
+>MIPS引入**sltu**和**sltiu**指令处理无符号整数。将有符号数作为无符号数进行处理，是一种检查数组下标是否越界的方法，很巧妙。
+
+>eg:检查代码仅使用一条sltu指令即可同时进行两种检查：
+```mips
+sltu $t0, $ts1, $t2 # $t0 = 0 if $s1 >= length or $s1 < 0
+beq $t0, $zero, IndexOutOfBounds # if bad, goto Error
+```
+
+## Switch&Case
+实现的最简单的办法就是借助一系列的条件判断，转化为if-then-else的嵌套。更高效的办法就是转移表。
+
