--- a/_posts/2021-02-19-指令(MIPS-32).md
+++ b/_posts/2021-02-19-指令(MIPS-32).md
@@ -5,7 +5,7 @@ date:   2021-02-19 18:32:31 +0800
 tags:
       - binary
 ---
-# 指令(MIPS-32)
+# 指令(MIPS-32)(working)
 >计算机语言中的基本单词就是指令。
 
 各种语言的指令集能体现出一定的相似性，因为所有计算机都是基于基本原理相似的硬件技术所构建的。计算机设计者致力于找到一种语言，既能方便硬件和编译器的设计，使性能达到最佳，又使成本和功耗最低。计组读了很久，沿着书中的习惯，详细的了解该指令集。
@@ -330,4 +330,41 @@ beq $t0, $zero, IndexOutOfBounds # if bad, goto Error
 
 ## Switch&Case
 实现的最简单的办法就是借助一系列的条件判断，转化为if-then-else的嵌套。更高效的办法就是转移表。
+
+## 过程
+>根据提供的参数执行一定任务的存储的子程序。
+
+程序员用过程进行结构化编程。它允许程序员每次只需将将精力集中在任务的一部分，参数承担过程与其他程序，数据之间接口的角色。
+
+过程运行时，程序必须遵循6个步骤
+* 将参数放在过程可以访问的位置。
+* 将控制转交给过程。
+* 获得过程所需的存储资源。
+* 执行需要的任务。
+* 将结果的值放在调用程序可以访问的位置。
+* 将控制返回初始点，因为一个过程可能由一个程序中的多个点调用。
+  
+MIPS体系为过程调用分配寄存器时遵循以下规定：
+* $a0 ~ $a3：用于传递参数的4个参数寄存器。
+* $v0 ~ $v1：用于返回值的两个值寄存器。
+* $ra：用于返回起始点的返回地址寄存器。
+
+实现调用操作的时一条过程调用指令：**jal**，jump-and-link instruction，跳转到某个地址的同时将下一条指令的地址保存在寄存器$ra中。格式如下：
+
+```mips
+jal ProcedureAddress
+```
+指令中链接部分表示指向调用点的地址或链接，以允许过程返回到合适的地址。存储在寄存器$ra(31号寄存器)中的链接部分称为**返回地址**。返回地址是必须的，因为同一个过程可能会在程序的不同部分调用。
+
+所以，MIPS体系引入寄存器跳转指令**jr**，jump register。用于case语句，表示无条件跳转到寄存器指定的地址。
+```mips
+jr $ra
+```
+### 调用者与被调用者
+调用程序称为**调用者**，将参数值放在$a0 ~ $a3，然后使用jal X跳转至过程X，即被调用者。被调用者执行运算，将结果存放在$v0 ~ $v1，然后使用jr $ra指令将控制返回给调用者。
+
+### 程序计数器PC
+在存储程序的概念中，使用一个寄存器来保存当前运行的指令地址是绝对必要的。即程序计数器(PC)。jal指令实际上将PC+4保存在寄存器$ra中，从而将链接指向下一条指令，为过程返回做好准备。
+
+若是对于一个过程
 
