--- a/_posts/2021-02-19-指令(MIPS-32).md
+++ b/_posts/2021-02-19-指令(MIPS-32).md
@@ -366,5 +366,40 @@ jr $ra
 ### 程序计数器PC
 在存储程序的概念中，使用一个寄存器来保存当前运行的指令地址是绝对必要的。即程序计数器(PC)。jal指令实际上将PC+4保存在寄存器$ra中，从而将链接指向下一条指令，为过程返回做好准备。
 
-若是对于一个过程
+若是对于一个过程，编译器需要使用多于4个参数寄存器和两个返回值寄存器。
 
+由于在任务完成后必须消除踪迹，因此调用者使用的任何寄存器都必须恢复到过程调用前所存储的值。
+
+换出寄存器的最理想的数据结构是**栈**，一种后入先出的队列。栈需要一个指针指向栈中最新分配的地址，以指示下一个过程放置换出寄存器的位置，或是寄存器旧值的存放位置。在每次寄存器进行保存或恢复时，栈指针以字为单位进行调整。MIPS软件为栈指针准备了第29号寄存器，将其命名为$sp。将数据放入栈中称为压栈(push)，从栈中移除数据称为出栈(pop)。
+
+栈增长是按照地址从高到低的顺序进行的。这意味着将数据压栈时，栈指针值减小；而数据出栈时，栈长度缩短，栈指针增大。
+
+eg：编译一个不含调用的C程序
+```c
+int lef_example(int g, int h, int i, int j)
+{
+      int f;
+
+      f = (g + h) - (i + j);
+      return f;
+}
+```
+编译后的MIPS代码及过程如下：
+
+参数变量g，h，i和j对应参数寄存器$a0、$a1、$a2和$a3，f对应$s0。编译后的程序是以如下标号开始的过程：
+```mips
+leaf_example:
+```
+下一步是保存过程中使用的寄存器。使用两个临时寄存器，因此需要保存三个寄存器：$s0、$t0和$t1。我们将旧值压栈，建立三个字节的空间：
+```mips
+addi $sp, $sp, -12  # adjust stack to make room for 3 items
+sw $t1, 8($sp)     # save register $t1 for use afterwards
+sw $t0, 4($sp)     # save register $t0 for use afterwards
+sw $s0, 0($sp)     # save register $s0 for use afterwards
+```
+存入 g + h，i + j 和 f：
+```mips
+add $t0, $a0, $a1  # register $t0 contains g + h
+add $t1, $a2, $a3  # register $t0 contains g + h
+sub $s0, $t0, $t1  # f = $t0 - $ t1, which is (g + h) - (i + j) 
+```
